# Gym-Membership-System

./: README.md  celerybeat-schedule.bak  celerybeat-schedule.dir  db.sqlite3  pyproject.toml
TXN/: admin.py  apps.py  models.py  urls.py  views.py
TXN/api/: serializer.py
TXN/migrations/: 0001_initial.py
TXN/templates/txn/: index.html
attendance/: admin.py  models.py  tasks.py
attendance/api/: serializer.py  urls.py  views.py
attendance/migrations/: 0001_initial.py  0002_alter_attendance_unique_together.py  0003_alter_attendance_attendance_date.py  0004_alter_attendance_unique_together.py
core/: settings.py  urls.py
exercise/: admin.py  models.py
exercise/api/: serializer.py  urls.py  views.py
exercise/migrations/: 0001_initial.py
member/: admin.py  tasks.py
member/api/: views.py
member/migrations/: 0002_remove_member_notes_alter_member_is_active.py
subscription/: admin.py  models.py
subscription/api/: serializer.py  service.py  urls.py  views.py
subscription/migrations/: 0001_initial.py  0002_alter_subscription_name_alter_subscription_table.py  0003_alter_subscription_name_gymmembership.py  0004_rename_subsrciption_gymmembership_subscription.py  0005_alter_gymmembership_price.py  0006_gymmembership_status.py
trainer/: admin.py  models.py
trainer/api/: serializer.py  urls.py  views.py
trainer/migrations/: 0001_initial.py
