[project]
name = "gym-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "django>=5.2.14",
    "django-celery-beat>=2.9.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "flower>=2.0.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
]
